samples/_failures_safe/1761707693_e241a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc8c3cdc.c: In function ‘main’:
./samples/SAFE/__tmp_bc8c3cdc.c:148:5: error: ‘buffer’ undeclared (first use in this function); did you mean ‘Buffer’?
  148 |     buffer
      |     ^~~~~~
      |     Buffer
./samples/SAFE/__tmp_bc8c3cdc.c:148:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_bc8c3cdc.c:148:11: error: expected ‘;’ at end of input
  148 |     buffer
      |           ^
      |           ;
./samples/SAFE/__tmp_bc8c3cdc.c:148:5: error: expected declaration or statement at end of input
  148 |     buffer
      |     ^~~~~~
